# legartis_coding_challenge

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  sample.md
backend/alembic/: env.py
backend/alembic/versions/: 622398860f71_add_timestamps_to_clause_types_and_.py  86d1dfd3d6d0_add_contracts_metadata.py  9c2b51f39f22_baseline.py  9ff51b90e284_add_clause_patterns.py  b6d971e24198_add_contract_clauses_matrix.py
backend/app/: datection.py  db.py  model.py  storage_local.py
backend/app/api/: _common.py  app_factory.py  clause_types.py  contracts.py  health.py
backend/app/services/: scanner.py
backend/tests/: conftest.py  test_scanner.py
frontend/: Dockerfile  nginx.conf  vite.config.js
frontend/src/: App.jsx  App.tsx  api.ts  styles.css
frontend/src/pages/: ContractDetail.tsx  Contracts.tsx  Upload.tsx
